# BFF

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  release.yml
src/bff/: __init__.py  main.py  utils.py
src/bff/commands/: check.py  clean.py  diff.py  index.py  init.py  locate.py  reset.py  stats.py  verify.py
src/bff/core/: constants.py  filtering.py  hash.py  index_manager.py
tests/: conftest.py  pytest.ini  test_cli.py  test_hash.py
