[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bff"
version = "0.1.0"
description = "BFF: Box For File - A CLI tool for efficient file indexing and deduplication."
readme = "README.md"
authors = [{ name = "Damien Rouchouse", email = "damien.rouchouse@etu.minesparis.psl.eu" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "python-magic>=0.4.27",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "mypy", "types-python-dateutil"]

[project.scripts]
bff = "bff.main:main"

[tool.setuptools.packages.find]
where = ["src"]
